examples/test/testpolicy13984.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13984
  namespace: namespace394
spec:
  podSelector:
    matchLabels:
      key18: value27
      key11: value5
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value5
          key12: value17
      podSelector:
        matchLabels:
          key46: value30
